--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Latest work section start -->
     <section class="latest-work-area" id="works">
         <div ">
-            <h1 style="">My Latest Work</h1>
+            <h1 >My Latest Work</h1>
             <img style="margin-left: 90px;" src="images/latest-work/work-1.png" alt="">
             <img src="images/latest-work/work-2.jpg" alt="">
             <img src="images/latest-work/work-3.jpg" alt="">
