--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   </div>
                   <div class="card-footer">
                     <p>
-                        <a class="cv-button" href="#" target="_blank">Demo >></a>
+                        <a class="cv-button" href="https://nurmurad32.github.io/hot-gadgete/" target="_blank">Demo >></a>
                     </p>
                   </div>
                 </div>
